--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -1,4 +1,33 @@
+body {
+  margin: 0;
+}
+
 .test-title {
   font-size: 20px;
   color: blue;
+}
+
+.ly_header {
+  height: 50px;
+  padding: 15px 0;
+}
+
+.ly_header_inner {
+  max-width: 1280px;
+  width: 90%;
+  height: 50px;
+  margin: 0 auto;
+  padding: 0 10px 0 15px;
+}
+
+.bl_headerLogo {
+  width: 136px;
+  height: 27px;
+  padding: 11.5px 0;
+  display: inline-block;
+}
+
+.el_headerLogoImg {
+  width: 136px;
+  height: 27px;
 }
