--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -2,6 +2,15 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
 .test-title {
   font-size: 20px;
   color: blue;
@@ -20,6 +29,10 @@ body {
   padding: 0 10px 0 15px;
 }
 
+.hp_col {
+  display: flex;
+}
+
 .bl_headerLogo {
   width: 136px;
   height: 27px;
@@ -27,7 +40,12 @@ body {
   display: inline-block;
 }
 
-.el_headerLogoImg {
-  width: 136px;
-  height: 27px;
+.bl_headerMenu_wrapper {
+  padding: 17px 0;
+}
+
+.el_headerMenu {
+  font: normal normal bold 16px/29px YuGothic;
+  color: #1B224C;
+  margin-left: 28px;
 }
