--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -5,11 +5,7 @@ body {
 
 a {
   text-decoration: none;
-}
-
-img {
-  width: 100%;
-  height: 100%;
+  cursor: pointer;
 }
 
 .test-title {
@@ -98,6 +94,10 @@ img {
   color: #1B224C;
 }
 
+.bl_tel:hover {
+  opacity: 0.7;
+}
+
 .bl_menuBtn_wrapper {
   margin-left: 10px;
 }
@@ -113,7 +113,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
 }
 
 .el_menuBtn__orange {
