--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -252,6 +252,27 @@ button {
   padding-left: 20px;
 }
 
-.bl_drawerMenu {
+.bl_drawerNav {
   list-style-type: none;
+  margin: 0; /* nav要素以下のul要素に自動でmarginが指定される */
+  padding: 0; /* nav要素以下のul要素に自動でpaddingが指定される */
+}
+
+.bl_drawerNav_item {
+  background-color: #1B224C;
+  height: 60px;
+  padding-left: 20px;
+  border-bottom: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+}
+
+.bl_drawerNav_link {
+  display: inline-block;
+  width: 100px;
+  height: 30px;
+  font-size: 16px;
+  line-height: 30px;
+  color: #FFFFFF;
 }
