--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -195,7 +195,7 @@ button {
   color: #1B224C;
 }
 
-.bl_drawerBtn > i.is_active {
+.bl_drawerBtn > i.is_drawerActive {
   display: block;
 }
 
@@ -214,7 +214,7 @@ button {
   opacity: 0;
 }
 
-.bl_drawerBg.is_active {
+.bl_drawerBg.is_drawerActive {
   visibility: visible;
   opacity: 0.8;
   transition: 0.3s;
@@ -239,7 +239,7 @@ button {
   transition: 0.3s;
 }
 
-.bl_drawer.is_active {
+.bl_drawer.is_drawerActive {
   transition: 0.3s;
   transform: translateX(0px);
 }
