--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -66,7 +66,7 @@ button {
 }
 
 .ly_header {
-  background-color: #FFFFFF;
+  background-color: #FFFFFF; /* TODO: 別クラスで指定 */
   width: 100%;
   height: 50px;
   padding: 15px 0;
@@ -299,6 +299,15 @@ button {
   height: 50px;
 }
 
-.ly-paddingTop {
+.ly_paddingTop {
   height: 80px;
+}
+
+/* ファーストビュー */
+.hp_firstView {
+  background-image: url('../img/first-view.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 476px;
 }
