--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -304,10 +304,30 @@ button {
 }
 
 /* ファーストビュー */
-.hp_firstView {
+.hp_fv {
   background-image: url('../img/first-view.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 476px;
+}
+
+.ly_fv_inner {
+  padding: 116px 20px 0;
+}
+
+.bl_fvTitle {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 48px;
+  color: #FFFFFF;
+  text-shadow: 0px 3px 6px #00000029;
+  text-align: center;
+}
+
+@media (min-width: 600px) {
+  .bl_fvTitle {
+    font-size: 48px;
+    line-height: 65px;
+  }
 }
