--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -14,6 +14,10 @@ button {
   cursor: pointer;
 }
 
+p {
+  margin: 0;
+}
+
 /* 共通で使う要素 */
 .el_companyLogo {
   width: 136px;
@@ -319,15 +323,30 @@ button {
 .bl_fvTitle {
   font-weight: bold;
   font-size: 40px;
-  line-height: 48px;
+  line-height: 40px;
   color: #FFFFFF;
   text-shadow: 0px 3px 6px #00000029;
   text-align: center;
+  margin-bottom: 21.5px;
 }
 
 @media (min-width: 600px) {
   .bl_fvTitle {
     font-size: 48px;
-    line-height: 65px;
+    line-height: 48px;
+  }
+}
+
+.bl_fvSubTitle {
+  font-size: 12px;
+  line-height: 21px;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+@media (min-width: 600px) {
+  .bl_fvSubTitle {
+    font-size: 18px;
+    line-height: 31px;
   }
 }
