--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -19,6 +19,26 @@ p {
 }
 
 /* 共通で使う要素 */
+.lg_only {
+  display: none !important;
+}
+
+@media screen and (min-width: 1025px) {
+  .lg_only {
+    display: block !important;
+  }
+}
+
+.md_only {
+  display: block !important;
+}
+
+@media screen and (min-width: 1025px) {
+  .md_only {
+    display: none !important;
+  }
+}
+
 .hp_ft16 {
   font-size: 16px !important;
 }
