--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -106,16 +106,27 @@ p {
 
 .el_title {
   font-weight: bold;
-  font-size: 36px;
-  line-height: 50px;
+  font-size: 24px;
+  line-height: 36px;
   color: #FFFFFF;
+  text-align: center;
 }
 
 @media screen and (min-width: 1025px) {
   .el_title {
     display: flex;
     justify-content: center;
+    font-size: 36px;
+    line-height: 50px;
   }
+}
+
+.el_title.el_title__white {
+  color: #FFFFFF;
+}
+
+.el_title.el_title__navy {
+  color: #1B224C;
 }
 
 /* ヘッダー */
@@ -382,15 +393,11 @@ p {
 }
 
 .ly_problem_inner {
-  padding: 55px 10px 10px;
-}
-
-.bl_problemTitle {
-  text-align: center;
-  margin-bottom: 58px;
+  padding: 55px 20px 30px;
 }
 
 .bl_problemItems {
+  margin-top:58px;
 }
 
 @media (min-width: 1025px) {
@@ -414,5 +421,60 @@ p {
 @media (min-width: 1025px) {
   .bl_problemItem {
     flex-direction: column;
+  }
+}
+
+.bl_feature {
+  background-color: #FFFFFF;
+  max-width: 900px;
+  min-height: 248px;
+  margin: 72.5px auto 0;
+  padding: 11px 16px 12px;
+}
+
+.bl_feature_inner {
+  min-height: 225px;
+  border: 5px solid #1B224C;
+  box-sizing: border-box;
+  padding: 15px 0 0;
+}
+
+.bl_featureTitle {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 36px;
+  color: #1B224C;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+@media screen and (min-width: 1025px) {
+  .bl_featureTitle {
+    font-size: 36px;
+    line-height: 50px;
+  }
+}
+
+.bl_featureDescription {
+  font-size: 18px;
+  line-height: 31px;
+  color: #1B224C;
+  padding: 0 20px 20px;
+  text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .bl_featureDescription {
+    font-size: 14px;
+    line-height: 21px;
+    text-align: left;
+  }
+
+  .bl_featureDescription p {
+    display: inline;
+  }
+
+  .bl_featureDescription p:not(:first-child) {
+    margin-left: -4px;
   }
 }
