--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -129,6 +129,10 @@ p {
   color: #1B224C;
 }
 
+.hp_underline {
+  background: linear-gradient(transparent 70%, #F5A623 70%);
+}
+
 /* ヘッダー */
 .hp_noScroll {
   overflow: hidden;
